--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+       .icon-loading {
+        position: absolute;
+        height : 64px;
+        width: 64px;
+        top: 50%;
+        left: 50%;
+        color: #fff;
+        z-index: 9999;
+        transform: translate(-50%, -50%);
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
